--- a/src/app.css
+++ b/src/app.css
@@ -15,14 +15,26 @@ body {
 
 @layer base {
 	:root {
-		--background: 200, 30%, 5%;
-		--primary: 201, 63%, 10%;
-		--primary-foreground: 20, 60%, 98%;
-		--secondary: 201, 52%, 19%;
-		--secondary-foreground: 24, 50%, 96%;
-		--muted: 201, 32%, 75%;
-		--muted-foreground: 21, 30%, 91%;
-		--foreground: 22, 31%, 95%;
+		--background: 240 10% 3.9%;
+		--foreground: 0 0% 98%;
+		--card: 240 10% 3.9%;
+		--card-foreground: 0 0% 98%;
+		--popover: 240 10% 3.9%;
+		--popover-foreground: 0 0% 98%;
+		--primary: 0 0% 98%;
+		--primary-foreground: 240 5.9% 10%;
+		--secondary: 240 3.7% 15.9%;
+		--secondary-foreground: 0 0% 98%;
+		--muted: 240 3.7% 15.9%;
+		--muted-foreground: 240 5% 64.9%;
+		--accent: 240 3.7% 15.9%;
+		--accent-foreground: 0 0% 98%;
+		--destructive: 0 62.8% 30.6%;
+		--destructive-foreground: 0 0% 98%;
+		--border: 240 3.7% 15.9%;
+		--input: 240 3.7% 15.9%;
+		--ring: 240 4.9% 83.9%;
+		--radius: 0.5rem;
 	}
 }
 
