--- a/src/app.css
+++ b/src/app.css
@@ -2,17 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-	height: 100vh;
-	width: 100%;
-	box-sizing: border-box;
-	margin: 0px;
-	padding: 0px;
-	font-family: 'Poppins';
-	color: white;
-}
-
 @layer base {
 	:root {
 		--background: 240 10% 3.9%;
@@ -36,6 +25,18 @@ body {
 		--ring: 240 4.9% 83.9%;
 		--radius: 0.5rem;
 	}
+}
+
+html,
+body {
+	height: 100vh;
+	width: 100%;
+	box-sizing: border-box;
+	margin: 0px;
+	padding: 0px;
+	font-family: 'Poppins';
+	color: white;
+	background-color: hsl(var(--background));
 }
 
 p {
