--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+	box-sizing: border-box;
+	min-width: 0;
+	min-height: 0;
+}
+
 @layer base {
 	:root {
 		--background: 240 10% 3.9%;
